--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@expo/webpack-config": "^0.17.2",
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
+    "graphql": "^15.8.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9",
-    "@expo/webpack-config": "^0.17.2"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
