--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-material/core": "^1.3.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "accordion-collapse-react-native": "^1.1.1",
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
     "graphql": "^15.8.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-chip-view": "^0.0.12",
     "react-native-paper": "^4.12.5",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
@@ -25,6 +30,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-vector-icons": "^6.4.12",
     "typescript": "^4.6.3"
   },
   "private": true
