Worked on pagination and styling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,11 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-chip-view": "^0.0.12",
     "react-native-material-menu": "^2.0.0",
+    "react-native-pagination": "^1.5.5",
     "react-native-paper": "^5.0.0-rc.9",
     "react-native-paper-dropdown": "^1.0.7",
-    "react-native-chip-view": "^0.0.12",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9"
   },
